WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130202
FTL should support IsBlah
https://bugs.webkit.org/show_bug.cgi?id=130202
Summary
FTL should support IsBlah
Filip Pizlo
Reported
2014-03-13 12:06:37 PDT
Patch forthcoming.
Attachments
the patch
(13.36 KB, patch)
2014-03-13 12:11 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-03-13 12:11:55 PDT
Created
attachment 226608
[details]
the patch
Early Warning System Bot
Comment 2
2014-03-13 12:14:59 PDT
Attachment 226608
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLOSRExitCompiler.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2014-03-13 12:31:52 PDT
Comment on
attachment 226608
[details]
the patch r=me
Filip Pizlo
Comment 4
2014-03-13 15:19:44 PDT
Landed in
http://trac.webkit.org/changeset/165571
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug